--- a/pre-processing.ipynb
+++ b/pre-processing.ipynb
@@ -6,16 +6,17 @@
    "metadata": {},
    "source": [
     "### Seamless Bay Area Tweet Analysis: Part 3, Pre-Processing\n",
-    "\n",
-    "\n",
+    "<br>\n",
     "The goal of this project is to analyze the twitter account of the nonprofit group Seamless Bay Area and determine what makes up the most high-impact tweet as measured by engagements.\n",
     "\n",
-    "In part three we pre-process the data to prepare it for modeling. We need to perform all the feature engineering that I suspect will be necessary for the modeling step. Specifically, I want to identify links/attached media, @replies (when the tweet references another twitter account), calls to action, and sentiment score."
+    "In part three we pre-process the data to prepare it for modeling. We need to perform all the feature engineering that I suspect will be necessary for the modeling step. Specifically, I want to identify links/attached media, @replies (when the tweet references another twitter account), calls to action, and sentiment score.\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 1,
    "id": "43c706ab",
    "metadata": {},
    "outputs": [],
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 2,
    "id": "cce8e9a8",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 3,
    "id": "a540d66d",
    "metadata": {},
    "outputs": [
@@ -191,7 +192,7 @@
        "4  ['and', 'then', 'come', 'say', 'hi', 'at', 'ne...  "
       ]
      },
-     "execution_count": 392,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 4,
    "id": "406d6bb6",
    "metadata": {},
    "outputs": [],
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 5,
    "id": "702413b3",
    "metadata": {},
    "outputs": [],
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 6,
    "id": "e8290062",
    "metadata": {},
    "outputs": [],
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 7,
    "id": "26ac035b",
    "metadata": {
     "scrolled": true
@@ -294,7 +295,7 @@
        "Name: links, Length: 2249, dtype: object"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 8,
    "id": "8e2be610",
    "metadata": {},
    "outputs": [],
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 9,
    "id": "b8b367c3",
    "metadata": {},
    "outputs": [],
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 10,
    "id": "ba2dc24e",
    "metadata": {},
    "outputs": [],
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 11,
    "id": "df6034ba",
    "metadata": {},
    "outputs": [],
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 12,
    "id": "9459412e",
    "metadata": {},
    "outputs": [],
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 13,
    "id": "1294b3ec",
    "metadata": {},
    "outputs": [],
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 14,
    "id": "7bd00afb",
    "metadata": {},
    "outputs": [
@@ -528,7 +529,7 @@
        "4          3.0  @SPUR_Urbanist  @icgee          "
       ]
      },
-     "execution_count": 403,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 15,
    "id": "c0d50f12",
    "metadata": {
     "scrolled": true
@@ -942,7 +943,7 @@
        "[2249 rows x 926 columns]"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 16,
    "id": "199fb69a",
    "metadata": {},
    "outputs": [
@@ -965,13 +966,13 @@
        "0.024589337340945483"
       ]
      },
-     "execution_count": 405,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#just out of curiosity, is there a linear relationship between replies an d\n",
+    "#just out of curiosity, is there a linear relationship between replies and engagement rate\n",
     "scores = []\n",
     "for reply in df1.columns[15:]:\n",
     "    x = np.array(df1[str(reply)]).reshape(-1, 1)\n",
@@ -999,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 17,
    "id": "c3035ad0",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 18,
    "id": "5fcc5df0",
    "metadata": {
     "scrolled": false
@@ -1130,7 +1131,7 @@
        "[4721 rows x 3 columns]"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 19,
    "id": "741bfe25",
    "metadata": {},
    "outputs": [],
@@ -1162,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 20,
    "id": "2bcad3c6",
    "metadata": {},
    "outputs": [],
@@ -1174,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 21,
    "id": "255836b0",
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 22,
    "id": "49016865",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 23,
    "id": "6f97dd42",
    "metadata": {},
    "outputs": [],
@@ -1217,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 24,
    "id": "3915a0fc",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 25,
    "id": "5ad6c3a2",
    "metadata": {},
    "outputs": [],
@@ -1248,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 26,
    "id": "91283364",
    "metadata": {},
    "outputs": [],
@@ -1286,8 +1287,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6018dc39",
+   "metadata": {},
+   "source": [
+    "#### Summary\n",
+    "<br>\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 27,
    "id": "91cd50ca",
    "metadata": {},
    "outputs": [],
