--- a/pre-processing.ipynb
+++ b/pre-processing.ipynb
@@ -310,7 +310,10 @@
    "id": "5a602e5e",
    "metadata": {},
    "source": [
-    "Next we'll pull out all the replies to other twitter accounts contained within the tweets. "
+    "<br>\n",
+    "Next we'll pull out all the replies to other twitter accounts contained within the tweets. \n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -987,7 +990,10 @@
    "id": "1ec33f0d",
    "metadata": {},
    "source": [
-    "Oof, well if an r^2 of 0.0246 is the best we can get that probably isn't a productive line of inquiry."
+    "<br>\n",
+    "Oof, well if an r^2 of 0.0246 is the best we can get that probably isn't a productive line of inquiry.\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -995,7 +1001,12 @@
    "id": "d6a2cea5",
    "metadata": {},
    "source": [
-    "Moving on to the last feature I want to create: sentiment score. I'll be doing this by getting a list of positive and negative words, then comparing each tweet and assigning it a score from -1 to 1 based on how many (if any) of those words it has. This list was downloaded from Kaggle (https://www.kaggle.com/datasets/mukulkirti/positive-and-negative-word-listrar)"
+    "<br>\n",
+    "Moving on to the last feature I want to create: sentiment score. This works by getting a list of positive and negative words, then comparing each tweet and assigning it a score from -1 to 1 based on how many (if any) of those words it has. This list was downloaded from Kaggle and can be found here:\n",
+    "<br>\n",
+    "https://www.kaggle.com/datasets/mukulkirti/positive-and-negative-word-listrar\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -1145,7 +1156,10 @@
    "id": "738de3c2",
    "metadata": {},
    "source": [
-    "First we find the number of positive words in each tweet."
+    "<br>\n",
+    "First we find the number of positive words in each tweet.\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -1188,7 +1202,10 @@
    "id": "d7880f14",
    "metadata": {},
    "source": [
-    "Then we find the number of positive words in each tweet."
+    "<br>\n",
+    "Then we find the number of positive words in each tweet.\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -1231,7 +1248,10 @@
    "id": "ba69c337",
    "metadata": {},
    "source": [
-    "Sentiment score is calculated by subtracting the number of negative words in the tweet from the number of positive words and dividing it by the total number of words to find a ratio of positive:negative."
+    "<br>\n",
+    "Sentiment score is calculated by subtracting the number of negative words in the tweet from the number of positive words and dividing it by the total number of words to find a ratio of positive:negative.\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -1283,16 +1303,22 @@
    "id": "33ae4b06",
    "metadata": {},
    "source": [
-    "In the next notebook we will begin to do modeling."
+    "<br>\n",
+    "In the next notebook we will begin to do modeling.\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6018dc39",
+   "id": "c738a1d1",
    "metadata": {},
    "source": [
     "#### Summary\n",
-    "<br>\n"
+    "<br>\n",
+    "In this pre-processing notebook we identified several potentially important features and extracted them from the tweet text data, including links, sentiment, and replies. At this point we've also performed some baseline regressions with time and tweet length, the best of which only had an R^2 of 0.023, which is not especially powerful. In the next notebook we will use these features to build some models and see if we can create some practically useful predictions.\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
